<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/fragment_profile_fragment_info_usericon"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/fragment_profile_fragment_info_icon_man"/>

    <RelativeLayout
        android:id="@+id/fragment_profile_fragment_info_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_profile_fragment_info_usericon"
        android:layout_marginTop="23dp">

        <TextView
            android:id="@+id/fragment_profile_fragment_info_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_section_info_name_title"/>

    <EditText
        android:id="@+id/fragment_profile_fragment_info_name"
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/fragment_profile_section_info_name_hint"/>

        <ImageView
            android:id="@+id/fragment_profile_fragment_info_name_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:src="@android:drawable/ic_menu_edit"
            android:visibility="invisible"/>
    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/fragment_profile_fragment_info_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_profile_fragment_info_name_container"
        android:layout_marginTop="23dp">
        <TextView
            android:id="@+id/fragment_profile_fragment_info_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_section_info_email_title"/>

        <EditText
        android:id="@+id/fragment_profile_fragment_info_email"
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/fragment_profile_section_info_email_hint"/>

        <ImageView
            android:id="@+id/fragment_profile_fragment_info_email_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:src="@android:drawable/ic_menu_edit"
            android:visibility="invisible"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_profile_fragment_info_phone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_profile_fragment_info_email_container"
        android:layout_marginTop="23dp">
    <TextView
        android:id="@+id/fragment_profile_fragment_info_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_section_info_phone_title"/>
    <EditText
        android:id="@+id/fragment_profile_fragment_info_phone"
        android:layout_marginTop="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/fragment_profile_section_info_phone_hint"/>
        <ImageView
            android:id="@+id/fragment_profile_fragment_info_phone_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:src="@android:drawable/ic_menu_edit"
            android:visibility="invisible"/>
    </RelativeLayout>


</RelativeLayout>