<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_marginTop="@dimen/login_icon_marginTop"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/login_icon_width"
        android:layout_height="@dimen/login_icon_height"
        android:src="@drawable/icon_logo_2"
        />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/login_container_numberInput"
        android:layout_marginTop="@dimen/login_container_numberInput_marginTop"
        android:layout_below="@+id/login_icon"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/login_numberInput"
        android:textSize="@dimen/login_numberInput_textsize"
        android:gravity="bottom"
        android:hint="@string/login_numberInput_hint"
        android:text="@string/login_numberInput_default"
        android:inputType="phone"
        android:layout_width="@dimen/login_numberInput_width"
        android:layout_height="@dimen/login_numberInput_height"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_container_code"
        android:animateLayoutChanges="true"
        android:layout_marginTop="@dimen/login_container_code_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/login_container_numberInput"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_container_code_desc_textSize"
            android:text="@string/login_container_code_title"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_code_firstNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/login_code_secondNumber"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLength="1" />
            <EditText
                android:id="@+id/login_code_secondNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:nextFocusForward="@id/login_code_thirdNumber"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:maxLength="1" />
            <EditText
                android:id="@+id/login_code_thirdNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:nextFocusForward="@id/login_code_fourthNumber"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:maxLength="1" />
            <EditText
                android:id="@+id/login_code_fourthNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_timer_AND_button_send_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_timer_AND_button_send_again_title"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:background="@drawable/login_button_selector"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_container_code"
        android:layout_marginTop="@dimen/login_button_marginTop"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login_button"
        android:textSize="@dimen/login_button_textSize"
        />



    <TextView
        android:id="@+id/login_entry_as_anonymous"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/login_entry_as_anonymous_textSize"
        android:textColor="@android:color/black"
        android:text="@string/login_entry_as_anonymous"
        android:layout_marginTop="@dimen/login_entry_as_anonymous_marginTop"
        android:layout_below="@id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>