<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_profile_fragment_orders_rv_item_padding"
    android:layout_marginBottom="@dimen/fragment_profile_fragment_orders_rv_item_marginBottom">


    <RelativeLayout
        android:id="@+id/fragment_profile_fragment_addresses_rv_item_container_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/fragment_profile_fragment_addresses_rv_item_numberOfOrder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/fragment_profile_fragment_addresses_rv_item_numberOfOrder_title_textSize"
        android:textColor="@android:color/black"
        android:text="@string/fragment_profile_fragment_addresses_rv_item_numberOfOrder_title"/>
    <TextView
        android:id="@+id/fragment_profile_fragment_addresses_rv_item_numberOfOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fragment_profile_fragment_addresses_rv_item_numberOfOrder_textSize"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@id/fragment_profile_fragment_addresses_rv_item_numberOfOrder_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_profile_fragment_addresses_rv_item_container_desc"
        android:layout_below="@id/fragment_profile_fragment_addresses_rv_item_container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/fragment_profile_fragment_addresses_rv_item_container_addresses"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_profile_fragment_addresses_rv_item_container_addresses_height">
            <TextView
                android:layout_alignParentBottom="true"
                android:id="@+id/fragment_profile_fragment_addresses_rv_item_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fragment_profile_fragment_addresses_rv_item_address_title_textSize"
                android:textColor="@android:color/black"
                android:text="@string/fragment_profile_fragment_addresses_rv_item_address_title"/>
            <TextView
                android:id="@+id/fragment_profile_fragment_addresses_rv_item_address"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/fragment_profile_fragment_addresses_rv_item_address_textSize"
                android:layout_toEndOf="@id/fragment_profile_fragment_addresses_rv_item_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_profile_fragment_addresses_rv_item_address_marginStart"/>
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/fragment_profile_fragment_addresses_rv_item_container_time"
            android:layout_below="@id/fragment_profile_fragment_addresses_rv_item_container_addresses"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_profile_fragment_addresses_rv_item_container_time_height">
            <TextView
                android:layout_alignParentBottom="true"
                android:id="@+id/fragment_profile_fragment_addresses_rv_item_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fragment_profile_fragment_addresses_rv_item_time_title_textSize"
                android:textColor="@android:color/black"
                android:text="@string/fragment_profile_fragment_addresses_rv_item_time_title"/>
            <TextView
                android:id="@+id/fragment_profile_fragment_addresses_rv_item_time"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/fragment_profile_fragment_addresses_rv_item_time_textSize"
                android:layout_toEndOf="@id/fragment_profile_fragment_addresses_rv_item_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_profile_fragment_addresses_rv_item_time_marginStart"/>
        </RelativeLayout>

    </RelativeLayout>






    <LinearLayout
        android:id="@+id/fragment_profile_fragment_addresses_rv_item_container_items"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/fragment_profile_fragment_addresses_rv_item_container_desc"/>


    <RelativeLayout
        android:id="@+id/fragment_profile_fragment_addresses_rv_item_container_total"
        android:layout_below="@id/fragment_profile_fragment_addresses_rv_item_container_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fragment_profile_fragment_addresses_rv_item_total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@android:color/black"
                android:text="@string/fragment_profile_fragment_addresses_rv_item_total_title"/>
            <TextView
                android:id="@+id/fragment_profile_fragment_addresses_rv_item_total"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_toStartOf="@id/fragment_profile_fragment_addresses_rv_item_total_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/fragment_profile_fragment_addresses_rv_item_total_sign"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:text="@string/fragment_profile_fragment_addresses_rv_item_total_sign"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>



</RelativeLayout>